<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentInicio">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView27"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="55dp"
                android:gravity="center"
                android:text="@string/textView29"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@drawable/bordes"
                android:src="@drawable/laptoplenovo" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView30"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView31"
                android:textColor="@android:color/holo_red_dark" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@drawable/bordes"
                android:src="@drawable/audifonos" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView32"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView33"
                android:textColor="@android:color/holo_red_dark" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@drawable/bordes"
                android:src="@drawable/discoduro" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView34"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bordes"
                android:gravity="center"
                android:text="@string/textView35"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>