<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@drawable/bordes"
        android:gravity="center"
        android:text="LOGIN"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:src="@drawable/usuario" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="164dp"
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="113dp"
        android:ems="10"
        android:hint="@string/editText2"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginBottom="41dp"
        android:background="@color/colorPrimary"
        android:text="@string/button3"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>