<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    tools:context=".FragmentHistorialPedidos">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        tools:context=".FragmentHistorialPedidos">

        <!-- TODO: Update blank fragment layout -->


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="340dp"
            android:layout_marginBottom="223dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:backgroundTint="@android:color/holo_orange_light" />

        <EditText
            android:id="@+id/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="61dp"
            android:layout_marginLeft="61dp"
            android:layout_marginTop="73dp"
            android:ems="10"
            android:hint="@string/texto"
            android:inputType="textPersonName" />

        <TableLayout
            android:layout_width="320dp"
            android:layout_height="228dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="62dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/textView50"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/textView16"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/textView15"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Juan Perez" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="18/11/2018" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="8 000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="Ricardo Flores" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="01/12/2018" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="20 000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="218dp"
            android:layout_marginLeft="218dp"
            android:layout_marginBottom="19dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@android:drawable/ic_media_previous" />

        <Button
            android:id="@+id/button4"
            android:layout_width="34dp"
            android:layout_height="29dp"
            android:layout_alignTop="@+id/button2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:background="@color/colorPrimary"
            android:drawableLeft="@android:drawable/ic_media_next" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/texto"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginBottom="1dp"
            android:layout_toEndOf="@+id/button2"
            android:layout_toRightOf="@+id/button2"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_search"
            app:backgroundTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/bordes"
            android:gravity="center"
            android:text="@string/textView24"
            android:textSize="22sp"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="340dp"
            android:layout_marginBottom="178dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            app:backgroundTint="@android:color/holo_orange_light" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="261dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="134dp" />
    </RelativeLayout>

</RelativeLayout>